--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,11 @@ repos:
       - id: django-upgrade
         args: ['--target-version', '5.0']
 
+  - repo: https://github.com/psf/black
+    rev: 24.8.0
+    hooks:
+    -   id: black
+
   # Run the Ruff linter.
 #  - repo: https://github.com/astral-sh/ruff-pre-commit
 #    rev: v0.9.3
