--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -36,19 +36,20 @@ services:
     env_file:
       - ./.envs/.production/.postgres
 
-  traefik:
-    build:
-      context: .
-      dockerfile: ./compose/production/traefik/Dockerfile
-    image: offgridplanner_production_traefik
-    depends_on:
-      - django
-    volumes:
-      - production_traefik:/etc/traefik/acme
-    ports:
-      - '0.0.0.0:80:80'
-      - '0.0.0.0:443:443'
-      - '0.0.0.0:5555:5555'
+# TODO enable again if being used later
+#  traefik:
+#    build:
+#      context: .
+#      dockerfile: ./compose/production/traefik/Dockerfile
+#    image: offgridplanner_production_traefik
+#    depends_on:
+#      - django
+#    volumes:
+#      - production_traefik:/etc/traefik/acme
+#    ports:
+#      - '0.0.0.0:80:80'
+#      - '0.0.0.0:443:443'
+#      - '0.0.0.0:5555:5555'
 
   redis:
     image: docker.io/redis:6
