Disable star import rule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ ignore = [
   "T201",  # print statements found
   "F841",  # unused variable
   "PD901", # Avoid using the generic variable name `df` for DataFrames
+  "F403", # Star imports (ignored because useful for Django urls)
   "F405", # `...` may be undefined, or defined from star imports
     "COM812" # Deactivated to avoid unexpecter behavior with the formatter (disable warning)
 ]
