Compile translations in production settings

--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -93,6 +93,7 @@ USER django
 
 RUN DATABASE_URL="" \
   DJANGO_SETTINGS_MODULE="config.settings.test" \
-  python manage.py compilemessages
+  python manage.py compilemessages \
+  python manage.py compilejsi18n -d django \
 
 ENTRYPOINT ["/entrypoint"]
