--- a/compose/local/docs/Dockerfile
+++ b/compose/local/docs/Dockerfile
@@ -12,6 +12,10 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   build-essential \
   # psycopg dependencies
   libpq-dev \
+  # pycairo dependencies
+  libcairo2-dev \
+  pkg-config \
+  python3-dev \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
