--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -12,8 +12,11 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   # dependencies for building Python packages
   build-essential \
   # psycopg dependencies
-  libpq-dev
-
+  libpq-dev \
+  # pycairo dependencies
+  libcairo2-dev \
+  pkgconf \
+  python3-dev
 
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements .
