Comment out unused services

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,7 +12,7 @@ services:
     container_name: offgridplanner_local_django
     depends_on:
       - postgres
-      - redis
+#      - redis
       - mailpit
     volumes:
       - .:/app:z
@@ -41,26 +41,26 @@ services:
     ports:
       - "8025:8025"
 
-  redis:
-    image: docker.io/redis:6
-    container_name: offgridplanner_local_redis
-
-    volumes:
-      - offgridplanner_local_redis_data:/data
-
-
-  celeryworker:
-    <<: *django
-    image: offgridplanner_local_celeryworker
-    container_name: offgridplanner_local_celeryworker
-    depends_on:
-      - redis
-      - postgres
-      - mailpit
-    ports: []
-    command: /start-celeryworker
-
 # TODO enable again if being used later - currently not needed
+#  redis:
+#    image: docker.io/redis:6
+#    container_name: offgridplanner_local_redis
+#
+#    volumes:
+#      - offgridplanner_local_redis_data:/data
+
+
+#  celeryworker:
+#    <<: *django
+#    image: offgridplanner_local_celeryworker
+#    container_name: offgridplanner_local_celeryworker
+#    depends_on:
+#      - redis
+#      - postgres
+#      - mailpit
+#    ports: []
+#    command: /start-celeryworker
+
 #  celerybeat:
 #    <<: *django
 #    image: offgridplanner_local_celerybeat
@@ -72,10 +72,10 @@ services:
 #    ports: []
 #    command: /start-celerybeat
 
-  flower:
-    <<: *django
-    image: offgridplanner_local_flower
-    container_name: offgridplanner_local_flower
-    ports:
-      - '5555:5555'
-    command: /start-flower
+#  flower:
+#    <<: *django
+#    image: offgridplanner_local_flower
+#    container_name: offgridplanner_local_flower
+#    ports:
+#      - '5555:5555'
+#    command: /start-flower
